kubernetes_files/part4/9_deployment_api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-api-deployed  
  template:
    metadata:
      labels:
        app: hello-api-deployed
    spec:
      containers:
      - name: hello-api-deployed
        image: hello-api:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000 # same port as app
